--- a/kibana/values.yaml
+++ b/kibana/values.yaml
@@ -138,7 +138,8 @@ ingress:
   enabled: true
   className: "nginx"
   pathtype: ImplementationSpecific
-  annotations: {}
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
   hosts:
