--- a/kibana/values.yaml
+++ b/kibana/values.yaml
@@ -62,11 +62,11 @@ healthCheckPath: "/app/kibana"
 
 # Allows you to add any config files in /usr/share/kibana/config/
 # such as kibana.yml
-kibanaConfig: {}
-#   kibana.yml: |
-#     key:
-#       nestedkey: value
-
+kibanaConfig:
+   kibana.yml: |
+     server:
+       basePath: /kibana
+       rewriteBasePath: false
 # If Pod Security Policy in use it may be required to specify security context as well as service account
 
 podSecurityContext:
