--- a/kibana/values.yaml
+++ b/kibana/values.yaml
@@ -143,9 +143,9 @@ ingress:
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: ak.webhop.me
+    - host: kibana.webhop.me
       paths:
-        - path: /kibana
+        - path: /
   #tls: []
   #  - secretName: chart-example-tls
   #    hosts:
