--- a/kibana/values.yaml
+++ b/kibana/values.yaml
@@ -140,12 +140,16 @@ ingress:
   pathtype: ImplementationSpecific
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    alb.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
   hosts:
     - host: kibana.webhop.me
       paths:
         - path: /
+          pathType: Prefix
   tls:
    - secretName: letsencrypt-prod-certificate-kibana
      hosts:
